@@ -535,7 +535,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">12</property>
                 <child>
-                  <widget class="GtkLabel" id="label1">
+                  <widget class="GtkLabel" id="connection_name_label">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">Connection _name:</property>
                     <property name="use_underline">True</property>
@@ -600,7 +600,7 @@
                   <widget class="GtkCheckButton" id="system_checkbutton">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Available to all users...</property>
+                    <property name="label" translatable="yes">Available to all users</property>
                     <property name="response_id">0</property>
                     <property name="draw_indicator">True</property>
                   </widget>
@@ -612,7 +612,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkHButtonBox" id="hbuttonbox2">
+              <widget class="GtkHButtonBox" id="action_area_hbox">
                 <property name="visible">True</property>
                 <property name="spacing">6</property>
                 <property name="layout_style">GTK_BUTTONBOX_END</property>
@@ -627,17 +627,7 @@
                   </widget>
                 </child>
                 <child>
-                  <widget class="GtkButton" id="ok_button">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="label" translatable="yes">gtk-ok</property>
-                    <property name="use_stock">True</property>
-                    <property name="response_id">0</property>
-                  </widget>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
+                  <placeholder/>
                 </child>
               </widget>
               <packing>
