@@ -1,3 +1,12 @@
+2008-10-24  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-editor.c
+	  src/connection-editor/nm-connection-editor.h
+	  src/connection-editor/nm-connection-editor.glade
+		- Improve PolicyKit auth to only ask once, and to sensitize/desensitize
+			the dialog dynamically based on what the user can and cannot do for
+			the given connection scope
+
 2008-10-23  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-list.c
